Use the correct region format for the clock
By setting -Djava.locale.providers=HOST
Closes #48